Fix dark mode title margin

--- a/simmons-tech-repair/styles-dark.css
+++ b/simmons-tech-repair/styles-dark.css
@@ -23,7 +23,7 @@ body {
 h1 {
     font-weight: normal;
     margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 0px;
 }
 h2 {
     margin-left: 5px;
